check-wordpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
      - name: wordpress
        image: vijay2359/cus-wordpress:${IMAGE_TAG}  
        imagePullPolicy: Always
        ports:
        - containerPort: 80
