wordpress-service-qa.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service-qa
  namespace: devwordpress
spec:
  selector:
    app: wordpress
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
