wordpress-service1.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service-dev  # Unique name for Dev
  namespace: default  # Dev environment
spec:
  selector:
    app: wordpress
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service-qa  # Unique name for QA
  namespace: devwordpress  # QA environment
spec:
  selector:
    app: wordpress
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
