ingress1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: devwordpress  
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: qa.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wordpress
            port:
              number: 80
